--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,11 @@ uvicorn[standard]>=0.24.0
 python-multipart>=0.0.6
 pydantic>=2.5.0
 python-dotenv>=1.0.0
+langchain>=0.1.0
+langchain-community>=0.0.10
+langchain-core>=0.1.0
+chromadb>=0.4.0
+sentence-transformers>=2.2.0
+pypdf>=3.15.0
+unstructured>=0.10.0
+requests>=2.31.0
