--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ python-dotenv>=1.0.0
 langchain>=0.1.0
 langchain-community>=0.0.10
 langchain-core>=0.1.0
+langchain-huggingface>=0.3.0
 chromadb>=0.4.0
 sentence-transformers>=2.2.0
 pypdf>=3.15.0
